--- a/server/package.json
+++ b/server/package.json
@@ -9,15 +9,16 @@
       "build": "nest build",
       "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
       "start": "nest start",
-      "start:dev": "nest start --watch",
-      "start:debug": "nest start --debug --watch",
-      "start:prod": "node dist/main",
+      "start:dev": "npx cross-env NODE_ENV=development nest start --watch",
+      "start:debug": "npx cross-env NODE_ENV=development nest start --debug --watch",
+      "start:prod": "npx cross-env NODE_ENV=production node dist/main",
+      "start:test": "npx cross-env NODE_ENV=test nest start --watch",
       "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-      "test": "jest",
-      "test:watch": "jest --watch",
-      "test:cov": "jest --coverage",
-      "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-      "test:e2e": "jest --config ./test/jest-e2e.json",
+      "test": "npx cross-env NODE_ENV=test jest",
+      "test:watch": "npx cross-env NODE_ENV=test jest --watch",
+      "test:cov": "npx cross-env NODE_ENV=test jest --coverage",
+      "test:debug": "npx cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+      "test:e2e": "npx cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
       "migration:generate": "typeorm-ts-node-commonjs migration:generate -d ormconfig.ts",
       "migration:run": "typeorm-ts-node-commonjs migration:run -d ormconfig.ts",
       "migration:revert": "typeorm-ts-node-commonjs migration:revert -d ormconfig.ts"
@@ -63,6 +64,7 @@
       "@types/supertest": "^2.0.16",
       "@typescript-eslint/eslint-plugin": "^6.19.0",
       "@typescript-eslint/parser": "^6.19.0",
+      "cross-env": "^7.0.3",
       "eslint": "^8.56.0",
       "eslint-config-prettier": "^9.1.0",
       "eslint-plugin-prettier": "^5.1.3",
