原型文件首页等部分页面，移入小程序目录，并优化调整。

--- a/miniapp/package.json
+++ b/miniapp/package.json
@@ -2,9 +2,11 @@
   "name": "nixi-zhiyuan-client",
   "version": "1.0.0",
   "private": true,
-  "description": "逆袭志愿微信小程序客户端",
+  "description": "逆袭智愿微信小程序客户端",
   "template": "typescript",
   "scripts": {
+    "dev": "npm run dev:weapp",
+    "build": "npm run build:weapp",
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
     "build:alipay": "taro build --type alipay",
@@ -70,8 +72,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
     "@tarojs/cli": "3.6.20",
-    "@tarojs/plugin-framework-react": "^3.6.20",
-    "@tarojs/react": "^3.6.20",
+    "@tarojs/plugin-framework-react": "3.6.20",
+    "@tarojs/react": "3.6.20",
     "@tarojs/webpack5-runner": "3.6.20",
     "@types/react": "^18.0.0",
     "@types/react-redux": "^7.1.33",
