--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,8 +8,9 @@ services:
       dockerfile: Dockerfile
     container_name: nixizhiyuan-server
     restart: always
-    ports:
-      - '3002:3002'
+    # 不暴露端口，仅通过 nginx 访问
+    # ports:
+    #   - '3002:3002'
     environment:
       - NODE_ENV=production
       - APP_PORT=3002
@@ -33,6 +34,27 @@ services:
     volumes:
       - ./uploads:/app/uploads
       - ./logs:/app/logs
+
+  # Nginx 反向代理服务
+  nixizhiyuan-nginx:
+    image: nginx:alpine
+    container_name: nixizhiyuan-nginx
+    restart: always
+    ports:
+      # 80 端口已被其他应用使用，仅使用 HTTPS
+      # - '80:80'
+      - '443:443'
+    volumes:
+      # Nginx 配置文件
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+      # HTTPS 证书文件
+      - ./https-key:/etc/nginx/ssl:ro
+      # Nginx 日志
+      - ./logs/nginx:/var/log/nginx
+    depends_on:
+      - nixizhiyuan-server
+    networks:
+      - rbridge_app-network
 
 networks:
   # 使用已存在的外部网络（主应用的 app-network）
