热门专业单独计算分数，单独存储答案

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,34 +1,46 @@
 ﻿# 应用配置
 NODE_ENV=development
-APP_PORT=3000
-APP_NAME=nestjs-backend-framework
+APP_PORT=3002
+APP_NAME=逆袭智愿
 APP_PREFIX=api/v1
 
 # CORS 配置
-CORS_ORIGIN=http://localhost:3000,http://localhost:3001
+CORS_ORIGIN=http://localhost:3002,http://localhost:3002
 
 # 数据库配置
 DB_TYPE=postgres
 DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_DATABASE=nestjs_db
-DB_SYNCHRONIZE=false
+DB_PORT=
+DB_USERNAME=
+DB_PASSWORD=
+DB_DATABASE=
+DB_SYNCHRONIZE=
 DB_LOGGING=true
 
+
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+REDIS_PASSWORD=
+ 
 # Redis 配置
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=chrdwvr450G
 REDIS_DB=0
 
 # JWT 配置
-JWT_SECRET=your-secret-key-change-in-production
-JWT_EXPIRES_IN=15m
-JWT_REFRESH_SECRET=your-refresh-secret-key-change-in-production
-JWT_REFRESH_EXPIRES_IN=7d
+JWT_SECRET=
+JWT_EXPIRES_IN=
+JWT_REFRESH_SECRET=
+JWT_REFRESH_EXPIRES_IN=30d
+
+WECHAT_APP_ID=
+WECHAT_APP_SECRET=
 
 # 日志配置
 LOG_LEVEL=info
 LOG_PRETTY=true
+
+
+CACHE_DEFAULT_TTL=600
