--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "compression": "^1.7.4",
+        "express-basic-auth": "^1.2.1",
         "helmet": "^7.1.0",
         "nestjs-pino": "^4.0.0",
         "passport": "^0.7.0",
