--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -31,6 +31,9 @@ services:
       # 微信小程序配置（从主应用的环境变量读取）
       - WECHAT_APP_ID=${WECHAT_APP_ID}
       - WECHAT_APP_SECRET=${WECHAT_APP_SECRET}
+      - CURRENT_YEAR=2025
+      - SECRET_KEY=${SECARE_KEY}
+      - OFFSET=${OFFSET}
     networks:
       # 连接到已存在的外部网络（主应用的 app-network）
       - rbridge_app-network
