招生计划和分数查询限制在意向省份的学校 增加查询索引 查询使用redis缓存

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - WECHAT_APP_ID=${WECHAT_APP_ID}
       - WECHAT_APP_SECRET=${WECHAT_APP_SECRET}
       - CURRENT_YEAR=2025
-      - SECRET_KEY=${SECARE_KEY}
+      - SECRET_KEY=${SECRET_KEY}
       - OFFSET=${OFFSET}
     networks:
       # 连接到已存在的外部网络（主应用的 app-network）
