--- a/miniapp/package.json
+++ b/miniapp/package.json
@@ -58,6 +58,8 @@
     "@tarojs/runtime": "3.6.20",
     "@tarojs/shared": "3.6.20",
     "@tarojs/taro": "3.6.20",
+    "jspdf": "^4.0.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^9.0.4",
