--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
         "@nestjs/terminus": "^10.1.1",
         "@nestjs/typeorm": "^10.0.1",
         "@types/passport-oauth2": "^1.8.0",
+        "@types/pdfkit": "^0.17.4",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "compression": "^1.7.4",
@@ -45,6 +46,7 @@
         "passport-custom": "^1.1.1",
         "passport-jwt": "^4.0.1",
         "passport-oauth2": "^1.8.0",
+        "pdfkit": "^0.17.2",
         "pg": "^8.11.3",
         "pino": "^8.16.2",
         "pino-http": "^9.0.0",
