--- a/server/package.json
+++ b/server/package.json
@@ -53,6 +53,7 @@
         "pino-pretty": "^10.2.3",
         "redis": "^4.6.12",
         "reflect-metadata": "^0.1.13",
+        "rotating-file-stream": "^3.2.8",
         "rxjs": "^7.8.1",
         "typeorm": "^0.3.19"
     },
