防止sql注入和dos攻击 修改高考信息，核对批次具体段次

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-﻿# 应用配置
+# 应用配置
 NODE_ENV=development
 APP_PORT=3002
 APP_NAME=逆袭智愿
@@ -42,5 +42,8 @@ WECHAT_APP_SECRET=
 LOG_LEVEL=info
 LOG_PRETTY=true
 
+# DoS 防护：速率限制（需 Redis）
+RATE_LIMIT_MAX_REQUESTS=300
+RATE_LIMIT_WINDOW_SECONDS=60
 
 CACHE_DEFAULT_TTL=600
