--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,8 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "compression": "^1.7.4",
+        "cookie-parser": "^1.4.6",
+        "cookie-parser": "^1.4.7",
         "express-basic-auth": "^1.2.1",
         "helmet": "^7.1.0",
         "nestjs-pino": "^4.0.0",
@@ -55,13 +57,15 @@
         "reflect-metadata": "^0.1.13",
         "rotating-file-stream": "^3.2.8",
         "rxjs": "^7.8.1",
-        "typeorm": "^0.3.19"
+        "typeorm": "^0.3.19",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@nestjs/cli": "^10.2.1",
         "@nestjs/schematics": "^10.0.3",
         "@nestjs/testing": "^10.2.7",
         "@types/compression": "^1.7.5",
+        "@types/cookie-parser": "^1.4.6",
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.11",
         "@types/node": "^20.10.3",
@@ -81,8 +85,7 @@
         "ts-loader": "^9.5.1",
         "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.3.3",
-        "xlsx": "^0.18.5"
+        "typescript": "^5.3.3"
     },
     "jest": {
         "moduleFileExtensions": [
