保证次选科目一致性 导数excel合并单元格，增加边框

--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,6 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "compression": "^1.7.4",
-        "cookie-parser": "^1.4.6",
         "cookie-parser": "^1.4.7",
         "express-basic-auth": "^1.2.1",
         "helmet": "^7.1.0",
@@ -58,7 +57,8 @@
         "rotating-file-stream": "^3.2.8",
         "rxjs": "^7.8.1",
         "typeorm": "^0.3.19",
-        "xlsx": "^0.18.5"
+        "xlsx": "^0.18.5",
+        "xlsx-js-style": "^1.2.0"
     },
     "devDependencies": {
         "@nestjs/cli": "^10.2.1",
